# baka_proof

./: .gitignore  .gitmodules  Makefile  MathAutoResearch.lean  geometry_lean_guardian_ACTIVE_CONTEXT_draft_v0_2.md  geometry_lean_guardian_BASE_SPEC_draft_v0_2.md  geometry_lean_guardian_PLAN_draft_v0_2.md  geometry_lean_guardian_RESOURCE_POLICY_TEMPLATE_draft_v0_2.md  geometry_lean_guardian_SOURCE_MAP_draft_v0_2.md  geometry_lean_guardian_v0_2_sha256sums.txt  geometry_lean_pipeline_plan_v0_3.md  lake-manifest.json  lakefile.lean  make.bat  pyproject.toml  sitecustomize.py
configs/: local_resource_profile.yaml
lean/: MathAutoResearch.lean
math_auto_research/: __init__.py
plugins/: __init__.py
schemas/: artifact_schema_map.json  v03_contract_inventory.json
scripts/: bootstrap_env.sh  bootstrap_geometry_engines.py  build_full2d_claimspec_v0_4_4.py  build_full2d_extraction_corpus_v0_4_4.py  build_full2d_extraction_corpus_v0_5.py  build_full2d_lean_extraction_cache.py  build_full2d_proof_artifact_batch.py  build_geometry_full2d_v0_6_freeze_manifest.py  check_acceptance_coverage_v0_5.py  check_acceptance_coverage_v0_6.py  check_active_guardian_spec.py  check_active_guardian_spec_v0_4_3.py  check_active_guardian_spec_v0_4_4.py  check_active_guardian_spec_v0_4_5.py  check_active_guardian_spec_v0_5.py  check_active_guardian_spec_v0_6.py  check_actual_task_pipeline_runs.py  check_actual_task_pipeline_runs_v0_4_4.py  check_actual_task_pipeline_runs_v0_4_5.py  check_all_baseline_matrix_v0_6.py  check_anti_v042_regression.py  check_anti_v043_projection_regression.py  (+230 more)
(+29320 files in other folders)
